--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Code2Data - Data Engineering & AI Learning Hub</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/engine"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/basic"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/interaction-external-attract"></script>
 </head>
 <body>
+    <div id="tsparticles"></div>
     <nav class="navbar">
         <div class="logo">
             <a href="/">Code2Data</a>
@@ -100,5 +104,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/particles.js"></script>
 </body>
 </html>
