--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
     </nav>
 
     <header class="hero">
-        <div class="hero-background"></div>
+        <div class="hero-background">
+            <div class="cube"></div>
+            <div class="cube"></div>
+            <div class="cube"></div>
+            <div class="cube"></div>
+            <div class="cube"></div>
+            <div class="cube"></div>
+        </div>
         <div class="hero-content">
             <h1>Master Data Engineering & AI</h1>
             <p>Learn practical skills in data engineering, machine learning, AI agents, and analytics</p>
