included ML topic

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                     <h3>Data Analytics</h3>
                     <p>Master data visualization and analysis techniques</p>
                 </div>
+                <div class="topic-card">
+                    <i class="fas fa-brain"></i>
+                    <h3>Machine Learning</h3>
+                    <p>Discover algorithms, neural networks, and predictive modeling</p>
+                </div>
             </div>
         </section>
 
