--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
                     <p>Master data visualization and analysis techniques</p>
                 </div>
                 <div class="topic-card">
-                    <i class="fas fa-brain"></i>
-                    <h3>Machine Learning</h3>
-                    <p>Discover algorithms, neural networks, and predictive modeling</p>
+                    <a href="machine-learning.html">
+                        <i class="fas fa-brain"></i>
+                        <h3>Machine Learning</h3>
+                        <p>Discover algorithms, neural networks, and predictive modeling</p>
+                    </a>
                 </div>
             </div>
         </section>
