index page mapping

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="/">Code2Data</a>
+            <a href="index.html">Code2Data</a>
         </div>
         <ul class="nav-links">
             <li><a href="#tutorials">Tutorials</a></li>
