data preprocessing overview

--- a/machine-learning.html
+++ b/machine-learning.html
@@ -26,6 +26,19 @@
             <h1><i class="fas fa-brain"></i> Machine Learning</h1>
             <p class="intro">Machine Learning is a subset of AI that enables systems to learn patterns from data and make decisions with minimal human intervention. It includes various paradigms such as supervised, unsupervised, deep, and reinforcement learning.</p>
 
+            <section id="data-preprocessing">
+                <h2><i class="fas fa-broom"></i> Data Preprocessing - Prepares raw data for modeling.</h2>
+                <ul>
+                    <li>Data Cleaning - Handle missing values, outliers, and inconsistencies.</li>
+                    <li>Feature Scaling - Normalize features (StandardScaler, MinMax).</li>
+                    <li>Feature Engineering - Create new features from raw data.</li>
+                    <li>Handling Categorical Variables - One-hot and label encoding.</li>
+                    <li>Transformation - Log, Box-Cox – reduce skewness.</li>
+                    <li>Dimensionality Reduction - PCA, t-SNE, UMAP.</li>
+                    <li>Data Sampling - Address imbalanced classes via under/oversampling.</li>
+                </ul>
+            </section>
+            
             <section id="supervised-learning">
                 <h2><i class="fas fa-graduation-cap"></i> Supervised Learning</h2>
                 <p>Learning from labeled data (input features with known output labels).</p>
@@ -115,19 +128,6 @@
                     <li>Actor-Critic Methods</li>
                     <li>Policy Gradients</li>
                     <li>Temporal Difference Learning</li>
-                </ul>
-            </section>
-
-            <section id="data-preprocessing">
-                <h2><i class="fas fa-broom"></i> Data Preprocessing</h2>
-                <ul>
-                    <li>Data Cleaning</li>
-                    <li>Feature Scaling</li>
-                    <li>Feature Engineering</li>
-                    <li>Handling Categorical Variables</li>
-                    <li>Transformation</li>
-                    <li>Dimensionality Reduction</li>
-                    <li>Data Sampling</li>
                 </ul>
             </section>
 
