--- a/machine-learning.html
+++ b/machine-learning.html
@@ -27,7 +27,8 @@
             <p class="intro">Machine Learning is a subset of AI that enables systems to learn patterns from data and make decisions with minimal human intervention. It includes various paradigms such as supervised, unsupervised, deep, and reinforcement learning.</p>
 
             <section id="data-preprocessing">
-                <h2><i class="fas fa-broom"></i> Data Preprocessing - Prepares raw data for modeling.</h2>
+                <h2><i class="fas fa-graduation-cap"></i> Data Preprocessing</h2>
+                <p>Prepares raw data for modeling.</p>
                 <ul>
                     <li>Data Cleaning - Handle missing values, outliers, and inconsistencies.</li>
                     <li>Feature Scaling - Normalize features (StandardScaler, MinMax).</li>
