--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </ul>
     </nav>
 
-    <header class="hero">
+    <header class="hero" style="background: linear-gradient(rgba(5, 55, 164, 0.879), rgba(3, 83, 174, 0.871)),
+                url('../images/hero-bg.jpg')">
         <div class="hero-content">
             <h1>Master Data Engineering & AI</h1>
             <p>Learn practical skills in data engineering, machine learning, AI agents, and analytics</p>
