--- a/machine-learning.html
+++ b/machine-learning.html
@@ -6,8 +6,172 @@
     <title>Machine Learning - Code2Data</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/engine"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/slim"></script>
+    <style>
+        :root {
+            --primary-color: #0d47a1;
+            --secondary-color: #1565c0;
+            --accent-color: #82b1ff;
+            --text-color: #333;
+            --section-bg: rgba(255, 255, 255, 0.95);
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+            color: var(--text-color);
+            line-height: 1.6;
+        }
+
+        #tsparticles {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+
+        .navbar {
+            background: rgba(13, 71, 161, 0.95);
+            padding: 1rem;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .logo a {
+            color: white;
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: var(--accent-color);
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+
+        .ml-content {
+            background: var(--section-bg);
+            padding: 2rem;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .ml-content h1 {
+            color: var(--primary-color);
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            border-bottom: 3px solid var(--accent-color);
+            padding-bottom: 0.5rem;
+        }
+
+        section {
+            margin: 2rem 0;
+            padding: 1.5rem;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 10px;
+            border-left: 4px solid var(--accent-color);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        section:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: var(--secondary-color);
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        h2 i {
+            color: var(--accent-color);
+        }
+
+        .subsection {
+            margin: 1.5rem 0;
+            padding: 1rem;
+            background: rgba(255, 255, 255, 0.5);
+            border-radius: 8px;
+        }
+
+        ul {
+            list-style: none;
+            padding-left: 1.5rem;
+        }
+
+        li {
+            margin: 0.5rem 0;
+            position: relative;
+        }
+
+        li::before {
+            content: "•";
+            color: var(--accent-color);
+            font-weight: bold;
+            position: absolute;
+            left: -1rem;
+        }
+
+        .intro {
+            font-size: 1.2rem;
+            line-height: 1.8;
+            color: var(--secondary-color);
+            margin-bottom: 2rem;
+            padding: 1rem;
+            background: rgba(130, 177, 255, 0.1);
+            border-radius: 8px;
+        }
+
+        footer {
+            background: rgba(13, 71, 161, 0.95);
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 3rem;
+        }
+
+        @media (max-width: 768px) {
+            .nav-links {
+                flex-direction: column;
+                gap: 1rem;
+            }
+
+            .ml-content {
+                padding: 1rem;
+            }
+
+            section {
+                margin: 1rem 0;
+                padding: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
+    <div id="tsparticles"></div>
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">Code2Data</a>
@@ -30,13 +194,13 @@
                 <h2><i class="fas fa-graduation-cap"></i> Data Preprocessing</h2>
                 <p>Prepares raw data for modeling.</p>
                 <ul>
-                    <li>Data Cleaning - Handle missing values, outliers, and inconsistencies.</li>
-                    <li>Feature Scaling - Normalize features (StandardScaler, MinMax).</li>
-                    <li>Feature Engineering - Create new features from raw data.</li>
-                    <li>Handling Categorical Variables - One-hot and label encoding.</li>
-                    <li>Transformation - Log, Box-Cox – reduce skewness.</li>
-                    <li>Dimensionality Reduction - PCA, t-SNE, UMAP.</li>
-                    <li>Data Sampling - Address imbalanced classes via under/oversampling.</li>
+                    <li><a href="preprocessing/data-cleaning.html">Data Cleaning</a> - Handle missing values, outliers, and inconsistencies</li>
+                    <li><a href="preprocessing/feature-scaling.html">Feature Scaling</a> - Normalize features (StandardScaler, MinMax)</li>
+                    <li><a href="preprocessing/feature-engineering.html">Feature Engineering</a> - Create new features from raw data</li>
+                    <li><a href="preprocessing/categorical-encoding.html">Handling Categorical Variables</a> - One-hot and label encoding</li>
+                    <li><a href="preprocessing/transformation.html">Transformation</a> - Log, Box-Cox – reduce skewness</li>
+                    <li><a href="preprocessing/dimensionality-reduction.html">Dimensionality Reduction</a> - PCA, t-SNE, UMAP</li>
+                    <li><a href="preprocessing/data-sampling.html">Data Sampling</a> - Address imbalanced classes via under/oversampling</li>
                 </ul>
             </section>
             
@@ -161,3 +325,102 @@
     </footer>
 </body>
 </html>
+<script>
+(async () => {
+    await loadSlim(tsParticles);
+
+    await tsParticles.load("tsparticles", {
+        background: {
+            color: {
+                value: "#0d47a1",
+            },
+        },
+        fpsLimit: 60,
+        particles: {
+            color: {
+                value: "#ffffff",
+            },
+            links: {
+                color: "#ffffff",
+                distance: 150,
+                enable: true,
+                opacity: 0.5,
+                width: 1,
+                triangles: {
+                    enable: true,
+                    opacity: 0.1
+                }
+            },
+            move: {
+                enable: true,
+                speed: 1.5,
+                direction: "none",
+                random: false,
+                straight: false,
+                outModes: {
+                    default: "bounce"
+                },
+                attract: {
+                    enable: true,
+                    rotateX: 600,
+                    rotateY: 1200
+                }
+            },
+            size: {
+                value: { min: 1, max: 3 },
+                animation: {
+                    enable: true,
+                    speed: 2,
+                    minimumValue: 0.1,
+                    sync: false
+                }
+            },
+            number: {
+                value: 60,
+                density: {
+                    enable: true,
+                    area: 800,
+                }
+            },
+            opacity: {
+                value: { min: 0.3, max: 0.7 },
+                animation: {
+                    enable: true,
+                    speed: 1,
+                    minimumValue: 0.1,
+                    sync: false
+                }
+            },
+            shape: {
+                type: "circle",
+            },
+        },
+        interactivity: {
+            detectsOn: "window",
+            events: {
+                onHover: {
+                    enable: true,
+                    mode: "grab"
+                },
+                onClick: {
+                    enable: true,
+                    mode: "push"
+                },
+                resize: true
+            },
+            modes: {
+                grab: {
+                    distance: 140,
+                    links: {
+                        opacity: 1
+                    }
+                },
+                push: {
+                    quantity: 4
+                }
+            }
+        },
+        detectRetina: true
+    });
+})();
+</script>
